<resources>
    <string name="app_name">CurrencyConverter</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="currency">Currency</string>
    <string name="currency_info">%s, %s</string>
    <string name="cb_price">Central bank: %s</string>
    <string name="buy_price">Buy price: %s</string>
    <string name="sell_price">Sell price: %s</string>
    <string name="query">Query</string>
    <string name="reload">Reload</string>
    <string name="internet_error">Failed to fetch data. Check your internet connection.</string>
    <string name="server_error">Server error occurred. Try again later.</string>
    <string name="enter_price">Enter price</string>
    <string name="source_price">Source price</string>
    <string name="target_price">Target price</string>
    <string name="convert">Convert</string>
    <string name="history">History</string>
    <string name="search_result">Result: %s</string>
    <string name="enter_valid_price">Enter valid price</string>
    <string name="select_source_currency">Select source currency</string>
    <string name="select_target_currency">Select target currency</string>
    <string name="convert_result_not_saved_error">Convert result not saved. Try again with internet connection.</string>
</resources>